<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.prepo.LoginActivity">

    <!-- Login progress -->
    <RelativeLayout
        android:id="@+id/login_progress"
        android:gravity="center"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />
    </RelativeLayout>


    <RelativeLayout android:gravity="center" android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/social_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_above="@+id/ortext"
            android:weightSum="1">
            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_plus_login_btn"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginRight="1dp"
                android:layout_height="40dp"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login_btn"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginLeft="1dp"
                android:layout_height="40dp"/>
            <!--<com.facebook.login.widget.LoginButton-->
                <!--android:id="@+id/facebook_login_btn"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="0.5"-->
                <!--android:layout_marginLeft="2dp"/>-->
        </LinearLayout>

        <TextView
            android:id="@+id/ortext"
            android:gravity="center_horizontal"
            android:text="------------------------ or ------------------------"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_below="@+id/ortext"
            android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ortext"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="1"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout android:layout_width="0dp" android:layout_weight="0.5"
                    android:layout_marginRight="1dp" android:layout_height="wrap_content">

                    <EditText android:id="@+id/register_user_first_name" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_first_name"
                        android:imeActionId="@+id/register"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified" android:inputType="textPersonName"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout  android:layout_width="0dp"  android:layout_weight="0.5"
                    android:layout_marginLeft="1dp" android:layout_height="wrap_content">

                    <EditText android:id="@+id/register_user_last_name" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_last_name"
                        android:imeActionId="@+id/register"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified" android:inputType="textPersonName"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/register_email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/register_mobile_number" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_mobile"
                    android:inputType="number" android:maxLength="10" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout  android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                <EditText android:id="@+id/register_user_password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/action_register_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/user_register_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_register_in_short"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
